--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -240,3 +240,13 @@
     border-radius: 1rem;
   }
 }
+
+@layer utilities {
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+}
